--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 		<meta name="description" content="Generate secure and stylish QR codes with PayNow QR Code Generator. Input your unique QR string to instantly create and customize your QR code with ease.">
 		<meta name="keywords" content="QR Code, PayNow, QR String, QR Code Generator, Custom QR Code">
 		<meta name="robots" content="index, follow">
-		<link rel="canonical" href="https://yourdomain.com/page.html">
+		<link rel="canonical" href="https://yapweijun1996.github.io/PayNow-QR-Code-Generator-by-QR-String/">
 		
 		<!-- Open Graph / Facebook -->
 		<meta property="og:title" content="PayNow QR Code Generator by QR String">
 		<meta property="og:description" content="Generate secure and stylish QR codes with PayNow QR Code Generator. Input your unique QR string to instantly create your custom QR code.">
-		<meta property="og:image" content="https://i.pinimg.com/736x/96/23/88/962388f062b619e64165d66f646759e3.jpg">
-		<meta property="og:url" content="https://yourdomain.com/page.html">
+		<meta property="og:image" content="https://yapweijun1996.github.io/PayNow-QR-Code-Generator-by-QR-String/img.jpg">
+		<meta property="og:url" content="https://yapweijun1996.github.io/PayNow-QR-Code-Generator-by-QR-String/">
 		<meta property="og:type" content="website">
 		
 		<!-- Twitter -->
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:title" content="PayNow QR Code Generator by QR String">
 		<meta name="twitter:description" content="Generate secure and stylish QR codes instantly with PayNow QR Code Generator using your unique QR string.">
-		<meta name="twitter:image" content="https://i.pinimg.com/736x/96/23/88/962388f062b619e64165d66f646759e3.jpg">
+		<meta name="twitter:image" content="https://yapweijun1996.github.io/PayNow-QR-Code-Generator-by-QR-String/img.jpg">
 	
 	
 		<link rel="stylesheet" href="styles.css">
