--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<!-- Open Graph / Facebook -->
 		<meta property="og:title" content="PayNow QR Code Generator by QR String">
 		<meta property="og:description" content="Generate secure and stylish QR codes with PayNow QR Code Generator. Input your unique QR string to instantly create your custom QR code.">
-		<meta property="og:image" content="https://yapweijun1996.github.io/PayNow-QR-Code-Generator-by-QR-String/img/img.jpg">
+		<meta property="og:image" content="https://yapweijun1996.github.io/PayNow-QR-Code-Generator-by-QR-String/og_img.jpg">
 		<meta property="og:url" content="https://yapweijun1996.github.io/PayNow-QR-Code-Generator-by-QR-String/">
 		<meta property="og:type" content="website">
 		
@@ -23,7 +23,7 @@
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:title" content="PayNow QR Code Generator by QR String">
 		<meta name="twitter:description" content="Generate secure and stylish QR codes instantly with PayNow QR Code Generator using your unique QR string.">
-		<meta name="twitter:image" content="https://yapweijun1996.github.io/PayNow-QR-Code-Generator-by-QR-String/img/img.jpg">
+		<meta name="twitter:image" content="https://yapweijun1996.github.io/PayNow-QR-Code-Generator-by-QR-String/og_img.jpg">
 	
 	
 		<link rel="stylesheet" href="styles.css">
@@ -35,7 +35,7 @@
 				font-family: Arial, sans-serif;
 				background: linear-gradient(135deg, #f4f4f9, #e1e8f0);
 				margin: 0;
-				padding: 20px;
+				padding: 0px;
 				min-height: 100vh;
 			}
 			.container {
@@ -155,5 +155,16 @@
 				};
 			}
 		</script>
+		
+		<!-- Footer [start]  -->
+		<footer style="position: fixed; bottom: 0; width: 100%; background-color: #333; color: #fff; text-align: center; padding: 25px 10px;">
+			By
+			<a href="https://github.com/yapweijun1996" style="color: #007bff; text-decoration: underline; font-weight: 600;" target="_blank">yapweijun1996</a>
+			@ <span id="currentYear"></span>
+		</footer>
+		<script>
+			document.getElementById('currentYear').textContent = new Date().getFullYear();
+		</script>
+		<!-- Footer [end  ]  -->
 	</body>
 </html>
